// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processing.composeMappers it should be possible apply composed mappers with list 1`] = `
Array [
  Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-16 09:23:52",
    "email": "aloshyn.yehor@pdffiller.team",
    "firstName": "Egor",
    "id": "C04A4300-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Aloshyn",
    "orgUserId": "50960400-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "40EC7100-0000-0000-0000D981",
      "5C153500-0000-0000-0000D981",
      "92271800-0000-0000-0000D981",
      "8060B000-0000-0000-0000D981",
      "06914100-0000-0000-0000D981",
      "896FA000-0000-0000-0000D981",
    ],
    "profile": "C0564300-0000-0000-0000AEEC",
    "role": 0,
    "settings": "E5D24300-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-16 09:24:47",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-17 11:18:27",
    "email": "aloshyn.yehor+1@pdffiller.team",
    "firstName": "Artem",
    "id": "54985400-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Tkachenko",
    "orgUserId": "8AD53D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "0F9FE100-0000-0000-0000D981",
      "8060B000-0000-0000-0000D981",
      "40EC7100-0000-0000-0000D981",
      "CE73D000-0000-0000-0000D981",
    ],
    "profile": "1A935400-0000-0000-0000AEEC",
    "role": 0,
    "settings": "4E595400-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-17 11:19:50",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-17 11:27:48",
    "email": "aloshyn.yehor+2@pdffiller.team",
    "firstName": "asdasdas",
    "id": "2144B400-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "asdasdas",
    "orgUserId": "EA415500-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "92271800-0000-0000-0000D981",
      "6BEAE000-0000-0000-0000D981",
    ],
    "profile": "BDB2B400-0000-0000-0000AEEC",
    "role": 0,
    "settings": "5E81B400-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-17 11:28:22",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-24 08:38:01",
    "email": "aloshyn.yehor+3@pdffiller.team",
    "firstName": "Dima",
    "id": "E9B2A210-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Golub",
    "orgUserId": "66574510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "72288300-0000-0000-0000D981",
    ],
    "profile": "C1FBA210-0000-0000-0000AEEC",
    "role": 0,
    "settings": "4008A210-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-24 08:38:43",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-24 08:39:23",
    "email": "aloshyn.yehor+4@pdffiller.team",
    "firstName": "Alex",
    "id": "F801B210-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Pehota",
    "orgUserId": "10B86510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "A63B9300-0000-0000-0000D981",
    ],
    "profile": "BB9DB210-0000-0000-0000AEEC",
    "role": 0,
    "settings": "41E0B210-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-24 08:39:51",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-24 08:40:28",
    "email": "aloshyn.yehor+5@pdffiller.team",
    "firstName": "Vadim",
    "id": "CB8FC210-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Yas",
    "orgUserId": "0A7C8510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "B607A300-0000-0000-0000D981",
    ],
    "profile": "A975C210-0000-0000-0000AEEC",
    "role": 0,
    "settings": "979AC210-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-24 08:40:56",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-26 09:37:06",
    "email": "aloshyn.yehor+6@pdffiller.team",
    "firstName": "Oksana",
    "id": "9897E310-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Marchenko",
    "orgUserId": "B5CC2710-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "8CED4400-0000-0000-0000D981",
    ],
    "profile": "9030E310-0000-0000-0000AEEC",
    "role": 0,
    "settings": "1C28E310-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-26 09:37:47",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-29 09:02:35",
    "email": "aloshyn.yehor+7@pdffiller.team",
    "firstName": "Kozhanaya",
    "id": "E869F510-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Zmeya",
    "orgUserId": "CBFF5910-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "97AC7400-0000-0000-0000D981",
    ],
    "profile": "AF15F510-0000-0000-0000AEEC",
    "role": 0,
    "settings": "19D0F510-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-29 09:03:22",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-11-28 16:33:53",
    "email": "aloshyn.yehor+pdffiller@pdffiller.team",
    "firstName": "pdffiller",
    "id": "DFD84810-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "pdffiller",
    "orgUserId": "C20EFC10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "30748500-0000-0000-0000D981",
      "C4F47500-0000-0000-0000D981",
    ],
    "profile": "297A4810-0000-0000-0000AEEC",
    "role": 0,
    "settings": "FCAD4810-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-11-28 16:34:21",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-11-30 13:19:35",
    "email": "ken@pdffiller.com",
    "firstName": "Ken",
    "id": "AB2C6910-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Kadimsky",
    "orgUserId": "63CDCD10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "55C44600-0000-0000-0000D981",
    ],
    "profile": "9E7B6910-0000-0000-0000AEEC",
    "role": 0,
    "settings": "8ECE6910-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-11-30 13:20:00",
    "user": undefined,
    "username": null,
  },
  Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-12-14 07:39:55",
    "email": "kostyshyn.oleh+15@pdffiller.team",
    "firstName": "Oleh",
    "id": "79AD6720-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Kostyshyn",
    "orgUserId": "2F670D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "CD1BA700-0000-0000-0000D981",
    ],
    "profile": "22C96720-0000-0000-0000AEEC",
    "role": 0,
    "settings": "51686720-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-12-14 07:40:45",
    "user": undefined,
    "username": "kostyshyn.oleh+15",
  },
  Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-12-21 09:40:44",
    "email": "otvodenko.bogdan+002@pdffiller.team",
    "firstName": "lol",
    "id": "C5638720-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "kek",
    "orgUserId": "691C5D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "459EC700-0000-0000-0000D981",
    ],
    "profile": "479B8720-0000-0000-0000AEEC",
    "role": 0,
    "settings": "BAE18720-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-12-21 09:41:40",
    "user": undefined,
    "username": "otvodenko.bogdan+002",
  },
  Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2019-01-04 16:17:33",
    "email": "matushchenko.ievgeniia+dev15@pdffiller.team",
    "firstName": "adgb",
    "id": "CB762A20-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "adfgn",
    "orgUserId": "0AF27030-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "581D5800-0000-0000-0000D981",
    ],
    "profile": "3D392A20-0000-0000-0000AEEC",
    "role": 0,
    "settings": "219C2A20-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2019-01-04 16:18:16",
    "user": undefined,
    "username": "matushchenko.ievgeniia+dev15",
  },
]
`;

exports[`processing.composeMappers it should be possible apply composed mappers with lookup 1`] = `
Object {
  "0A7C8510-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-24 08:40:28",
    "email": "aloshyn.yehor+5@pdffiller.team",
    "firstName": "Vadim",
    "id": "CB8FC210-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Yas",
    "orgUserId": "0A7C8510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "B607A300-0000-0000-0000D981",
    ],
    "profile": "A975C210-0000-0000-0000AEEC",
    "role": 0,
    "settings": "979AC210-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-24 08:40:56",
    "user": undefined,
    "username": null,
  },
  "0AF27030-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2019-01-04 16:17:33",
    "email": "matushchenko.ievgeniia+dev15@pdffiller.team",
    "firstName": "adgb",
    "id": "CB762A20-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "adfgn",
    "orgUserId": "0AF27030-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "581D5800-0000-0000-0000D981",
    ],
    "profile": "3D392A20-0000-0000-0000AEEC",
    "role": 0,
    "settings": "219C2A20-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2019-01-04 16:18:16",
    "user": undefined,
    "username": "matushchenko.ievgeniia+dev15",
  },
  "10B86510-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-24 08:39:23",
    "email": "aloshyn.yehor+4@pdffiller.team",
    "firstName": "Alex",
    "id": "F801B210-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Pehota",
    "orgUserId": "10B86510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "A63B9300-0000-0000-0000D981",
    ],
    "profile": "BB9DB210-0000-0000-0000AEEC",
    "role": 0,
    "settings": "41E0B210-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-24 08:39:51",
    "user": undefined,
    "username": null,
  },
  "2F670D20-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-12-14 07:39:55",
    "email": "kostyshyn.oleh+15@pdffiller.team",
    "firstName": "Oleh",
    "id": "79AD6720-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Kostyshyn",
    "orgUserId": "2F670D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "CD1BA700-0000-0000-0000D981",
    ],
    "profile": "22C96720-0000-0000-0000AEEC",
    "role": 0,
    "settings": "51686720-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-12-14 07:40:45",
    "user": undefined,
    "username": "kostyshyn.oleh+15",
  },
  "50960400-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-16 09:23:52",
    "email": "aloshyn.yehor@pdffiller.team",
    "firstName": "Egor",
    "id": "C04A4300-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Aloshyn",
    "orgUserId": "50960400-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "40EC7100-0000-0000-0000D981",
      "5C153500-0000-0000-0000D981",
      "92271800-0000-0000-0000D981",
      "8060B000-0000-0000-0000D981",
      "06914100-0000-0000-0000D981",
      "896FA000-0000-0000-0000D981",
    ],
    "profile": "C0564300-0000-0000-0000AEEC",
    "role": 0,
    "settings": "E5D24300-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-16 09:24:47",
    "user": undefined,
    "username": null,
  },
  "63CDCD10-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-11-30 13:19:35",
    "email": "ken@pdffiller.com",
    "firstName": "Ken",
    "id": "AB2C6910-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Kadimsky",
    "orgUserId": "63CDCD10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "55C44600-0000-0000-0000D981",
    ],
    "profile": "9E7B6910-0000-0000-0000AEEC",
    "role": 0,
    "settings": "8ECE6910-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-11-30 13:20:00",
    "user": undefined,
    "username": null,
  },
  "66574510-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-24 08:38:01",
    "email": "aloshyn.yehor+3@pdffiller.team",
    "firstName": "Dima",
    "id": "E9B2A210-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Golub",
    "orgUserId": "66574510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "72288300-0000-0000-0000D981",
    ],
    "profile": "C1FBA210-0000-0000-0000AEEC",
    "role": 0,
    "settings": "4008A210-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-24 08:38:43",
    "user": undefined,
    "username": null,
  },
  "691C5D20-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-12-21 09:40:44",
    "email": "otvodenko.bogdan+002@pdffiller.team",
    "firstName": "lol",
    "id": "C5638720-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "kek",
    "orgUserId": "691C5D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "459EC700-0000-0000-0000D981",
    ],
    "profile": "479B8720-0000-0000-0000AEEC",
    "role": 0,
    "settings": "BAE18720-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-12-21 09:41:40",
    "user": undefined,
    "username": "otvodenko.bogdan+002",
  },
  "8AD53D20-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-17 11:18:27",
    "email": "aloshyn.yehor+1@pdffiller.team",
    "firstName": "Artem",
    "id": "54985400-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Tkachenko",
    "orgUserId": "8AD53D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "0F9FE100-0000-0000-0000D981",
      "8060B000-0000-0000-0000D981",
      "40EC7100-0000-0000-0000D981",
      "CE73D000-0000-0000-0000D981",
    ],
    "profile": "1A935400-0000-0000-0000AEEC",
    "role": 0,
    "settings": "4E595400-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-17 11:19:50",
    "user": undefined,
    "username": null,
  },
  "B5CC2710-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-26 09:37:06",
    "email": "aloshyn.yehor+6@pdffiller.team",
    "firstName": "Oksana",
    "id": "9897E310-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Marchenko",
    "orgUserId": "B5CC2710-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "8CED4400-0000-0000-0000D981",
    ],
    "profile": "9030E310-0000-0000-0000AEEC",
    "role": 0,
    "settings": "1C28E310-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-26 09:37:47",
    "user": undefined,
    "username": null,
  },
  "C20EFC10-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": "",
    },
    "autoGenerated": 0,
    "createdAt": "2018-11-28 16:33:53",
    "email": "aloshyn.yehor+pdffiller@pdffiller.team",
    "firstName": "pdffiller",
    "id": "DFD84810-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "pdffiller",
    "orgUserId": "C20EFC10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "30748500-0000-0000-0000D981",
      "C4F47500-0000-0000-0000D981",
    ],
    "profile": "297A4810-0000-0000-0000AEEC",
    "role": 0,
    "settings": "FCAD4810-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-11-28 16:34:21",
    "user": undefined,
    "username": null,
  },
  "CBFF5910-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-29 09:02:35",
    "email": "aloshyn.yehor+7@pdffiller.team",
    "firstName": "Kozhanaya",
    "id": "E869F510-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "Zmeya",
    "orgUserId": "CBFF5910-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "97AC7400-0000-0000-0000D981",
    ],
    "profile": "AF15F510-0000-0000-0000AEEC",
    "role": 0,
    "settings": "19D0F510-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-29 09:03:22",
    "user": undefined,
    "username": null,
  },
  "EA415500-0000-0000-0000391B": Object {
    "__$meta": Object {
      "source": null,
    },
    "autoGenerated": 0,
    "createdAt": "2018-10-17 11:27:48",
    "email": "aloshyn.yehor+2@pdffiller.team",
    "firstName": "asdasdas",
    "id": "2144B400-0000-0000-00009BC6",
    "isSystem": 0,
    "lastName": "asdasdas",
    "orgUserId": "EA415500-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "organizations": Array [
      "8060B000-0000-0000-0000D981",
      "92271800-0000-0000-0000D981",
      "6BEAE000-0000-0000-0000D981",
    ],
    "profile": "BDB2B400-0000-0000-0000AEEC",
    "role": 0,
    "settings": "5E81B400-0000-0000-0000D045",
    "status": "ACTIVE",
    "updatedAt": "2018-10-17 11:28:22",
    "user": undefined,
    "username": null,
  },
}
`;

exports[`processing.map it should map orgUsers from list with replacing id with orgUserId 1`] = `
Array [
  Object {
    "orgUserId": "50960400-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "C04A4300-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "8AD53D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "54985400-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "EA415500-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "2144B400-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "66574510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "E9B2A210-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "10B86510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "F801B210-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "0A7C8510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "CB8FC210-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "B5CC2710-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "9897E310-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "CBFF5910-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "E869F510-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "C20EFC10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "DFD84810-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "63CDCD10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "AB2C6910-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "2F670D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "79AD6720-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "691C5D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "C5638720-0000-0000-00009BC6",
  },
  Object {
    "orgUserId": "0AF27030-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "CB762A20-0000-0000-00009BC6",
  },
]
`;

exports[`processing.map it should map orgUsers from lookup with replacing id with orgUserId 1`] = `
Object {
  "0A7C8510-0000-0000-0000391B": Object {
    "orgUserId": "0A7C8510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "CB8FC210-0000-0000-00009BC6",
  },
  "0AF27030-0000-0000-0000391B": Object {
    "orgUserId": "0AF27030-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "CB762A20-0000-0000-00009BC6",
  },
  "10B86510-0000-0000-0000391B": Object {
    "orgUserId": "10B86510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "F801B210-0000-0000-00009BC6",
  },
  "2F670D20-0000-0000-0000391B": Object {
    "orgUserId": "2F670D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "79AD6720-0000-0000-00009BC6",
  },
  "50960400-0000-0000-0000391B": Object {
    "orgUserId": "50960400-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "C04A4300-0000-0000-00009BC6",
  },
  "63CDCD10-0000-0000-0000391B": Object {
    "orgUserId": "63CDCD10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "AB2C6910-0000-0000-00009BC6",
  },
  "66574510-0000-0000-0000391B": Object {
    "orgUserId": "66574510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "E9B2A210-0000-0000-00009BC6",
  },
  "691C5D20-0000-0000-0000391B": Object {
    "orgUserId": "691C5D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "C5638720-0000-0000-00009BC6",
  },
  "8AD53D20-0000-0000-0000391B": Object {
    "orgUserId": "8AD53D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "54985400-0000-0000-00009BC6",
  },
  "B5CC2710-0000-0000-0000391B": Object {
    "orgUserId": "B5CC2710-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "9897E310-0000-0000-00009BC6",
  },
  "C20EFC10-0000-0000-0000391B": Object {
    "orgUserId": "C20EFC10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "DFD84810-0000-0000-00009BC6",
  },
  "CBFF5910-0000-0000-0000391B": Object {
    "orgUserId": "CBFF5910-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "E869F510-0000-0000-00009BC6",
  },
  "EA415500-0000-0000-0000391B": Object {
    "orgUserId": "EA415500-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": "2144B400-0000-0000-00009BC6",
  },
}
`;

exports[`processing.populate it should populate user in map orgUsers from list with replacing id with orgUserId 1`] = `
Array [
  Object {
    "id": "50960400-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-16 09:23:52",
      "email": "aloshyn.yehor@pdffiller.team",
      "firstName": "Egor",
      "id": "C04A4300-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Aloshyn",
      "organizations": Array [
        "40EC7100-0000-0000-0000D981",
        "5C153500-0000-0000-0000D981",
        "92271800-0000-0000-0000D981",
        "8060B000-0000-0000-0000D981",
        "06914100-0000-0000-0000D981",
        "896FA000-0000-0000-0000D981",
      ],
      "profile": "C0564300-0000-0000-0000AEEC",
      "settings": "E5D24300-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-16 09:24:47",
      "username": null,
    },
  },
  Object {
    "id": "8AD53D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-17 11:18:27",
      "email": "aloshyn.yehor+1@pdffiller.team",
      "firstName": "Artem",
      "id": "54985400-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Tkachenko",
      "organizations": Array [
        "0F9FE100-0000-0000-0000D981",
        "8060B000-0000-0000-0000D981",
        "40EC7100-0000-0000-0000D981",
        "CE73D000-0000-0000-0000D981",
      ],
      "profile": "1A935400-0000-0000-0000AEEC",
      "settings": "4E595400-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-17 11:19:50",
      "username": null,
    },
  },
  Object {
    "id": "EA415500-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-17 11:27:48",
      "email": "aloshyn.yehor+2@pdffiller.team",
      "firstName": "asdasdas",
      "id": "2144B400-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "asdasdas",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "92271800-0000-0000-0000D981",
        "6BEAE000-0000-0000-0000D981",
      ],
      "profile": "BDB2B400-0000-0000-0000AEEC",
      "settings": "5E81B400-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-17 11:28:22",
      "username": null,
    },
  },
  Object {
    "id": "66574510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:38:01",
      "email": "aloshyn.yehor+3@pdffiller.team",
      "firstName": "Dima",
      "id": "E9B2A210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Golub",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "72288300-0000-0000-0000D981",
      ],
      "profile": "C1FBA210-0000-0000-0000AEEC",
      "settings": "4008A210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:38:43",
      "username": null,
    },
  },
  Object {
    "id": "10B86510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:39:23",
      "email": "aloshyn.yehor+4@pdffiller.team",
      "firstName": "Alex",
      "id": "F801B210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Pehota",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "A63B9300-0000-0000-0000D981",
      ],
      "profile": "BB9DB210-0000-0000-0000AEEC",
      "settings": "41E0B210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:39:51",
      "username": null,
    },
  },
  Object {
    "id": "0A7C8510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:40:28",
      "email": "aloshyn.yehor+5@pdffiller.team",
      "firstName": "Vadim",
      "id": "CB8FC210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Yas",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "B607A300-0000-0000-0000D981",
      ],
      "profile": "A975C210-0000-0000-0000AEEC",
      "settings": "979AC210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:40:56",
      "username": null,
    },
  },
  Object {
    "id": "B5CC2710-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-26 09:37:06",
      "email": "aloshyn.yehor+6@pdffiller.team",
      "firstName": "Oksana",
      "id": "9897E310-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Marchenko",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "8CED4400-0000-0000-0000D981",
      ],
      "profile": "9030E310-0000-0000-0000AEEC",
      "settings": "1C28E310-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-26 09:37:47",
      "username": null,
    },
  },
  Object {
    "id": "CBFF5910-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-29 09:02:35",
      "email": "aloshyn.yehor+7@pdffiller.team",
      "firstName": "Kozhanaya",
      "id": "E869F510-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Zmeya",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "97AC7400-0000-0000-0000D981",
      ],
      "profile": "AF15F510-0000-0000-0000AEEC",
      "settings": "19D0F510-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-29 09:03:22",
      "username": null,
    },
  },
  Object {
    "id": "C20EFC10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-11-28 16:33:53",
      "email": "aloshyn.yehor+pdffiller@pdffiller.team",
      "firstName": "pdffiller",
      "id": "DFD84810-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "pdffiller",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "30748500-0000-0000-0000D981",
        "C4F47500-0000-0000-0000D981",
      ],
      "profile": "297A4810-0000-0000-0000AEEC",
      "settings": "FCAD4810-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-11-28 16:34:21",
      "username": null,
    },
  },
  Object {
    "id": "63CDCD10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-11-30 13:19:35",
      "email": "ken@pdffiller.com",
      "firstName": "Ken",
      "id": "AB2C6910-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Kadimsky",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "55C44600-0000-0000-0000D981",
      ],
      "profile": "9E7B6910-0000-0000-0000AEEC",
      "settings": "8ECE6910-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-11-30 13:20:00",
      "username": null,
    },
  },
  Object {
    "id": "2F670D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-12-14 07:39:55",
      "email": "kostyshyn.oleh+15@pdffiller.team",
      "firstName": "Oleh",
      "id": "79AD6720-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Kostyshyn",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "CD1BA700-0000-0000-0000D981",
      ],
      "profile": "22C96720-0000-0000-0000AEEC",
      "settings": "51686720-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-12-14 07:40:45",
      "username": "kostyshyn.oleh+15",
    },
  },
  Object {
    "id": "691C5D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-12-21 09:40:44",
      "email": "otvodenko.bogdan+002@pdffiller.team",
      "firstName": "lol",
      "id": "C5638720-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "kek",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "459EC700-0000-0000-0000D981",
      ],
      "profile": "479B8720-0000-0000-0000AEEC",
      "settings": "BAE18720-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-12-21 09:41:40",
      "username": "otvodenko.bogdan+002",
    },
  },
  Object {
    "id": "0AF27030-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2019-01-04 16:17:33",
      "email": "matushchenko.ievgeniia+dev15@pdffiller.team",
      "firstName": "adgb",
      "id": "CB762A20-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "adfgn",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "581D5800-0000-0000-0000D981",
      ],
      "profile": "3D392A20-0000-0000-0000AEEC",
      "settings": "219C2A20-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2019-01-04 16:18:16",
      "username": "matushchenko.ievgeniia+dev15",
    },
  },
]
`;

exports[`processing.populate it should populate user in orgUsers from lookup with replacing id with orgUserId 1`] = `
Object {
  "0A7C8510-0000-0000-0000391B": Object {
    "id": "0A7C8510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:40:28",
      "email": "aloshyn.yehor+5@pdffiller.team",
      "firstName": "Vadim",
      "id": "CB8FC210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Yas",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "B607A300-0000-0000-0000D981",
      ],
      "profile": "A975C210-0000-0000-0000AEEC",
      "settings": "979AC210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:40:56",
      "username": null,
    },
  },
  "0AF27030-0000-0000-0000391B": Object {
    "id": "0AF27030-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2019-01-04 16:17:33",
      "email": "matushchenko.ievgeniia+dev15@pdffiller.team",
      "firstName": "adgb",
      "id": "CB762A20-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "adfgn",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "581D5800-0000-0000-0000D981",
      ],
      "profile": "3D392A20-0000-0000-0000AEEC",
      "settings": "219C2A20-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2019-01-04 16:18:16",
      "username": "matushchenko.ievgeniia+dev15",
    },
  },
  "10B86510-0000-0000-0000391B": Object {
    "id": "10B86510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:39:23",
      "email": "aloshyn.yehor+4@pdffiller.team",
      "firstName": "Alex",
      "id": "F801B210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Pehota",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "A63B9300-0000-0000-0000D981",
      ],
      "profile": "BB9DB210-0000-0000-0000AEEC",
      "settings": "41E0B210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:39:51",
      "username": null,
    },
  },
  "2F670D20-0000-0000-0000391B": Object {
    "id": "2F670D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-12-14 07:39:55",
      "email": "kostyshyn.oleh+15@pdffiller.team",
      "firstName": "Oleh",
      "id": "79AD6720-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Kostyshyn",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "CD1BA700-0000-0000-0000D981",
      ],
      "profile": "22C96720-0000-0000-0000AEEC",
      "settings": "51686720-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-12-14 07:40:45",
      "username": "kostyshyn.oleh+15",
    },
  },
  "50960400-0000-0000-0000391B": Object {
    "id": "50960400-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-16 09:23:52",
      "email": "aloshyn.yehor@pdffiller.team",
      "firstName": "Egor",
      "id": "C04A4300-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Aloshyn",
      "organizations": Array [
        "40EC7100-0000-0000-0000D981",
        "5C153500-0000-0000-0000D981",
        "92271800-0000-0000-0000D981",
        "8060B000-0000-0000-0000D981",
        "06914100-0000-0000-0000D981",
        "896FA000-0000-0000-0000D981",
      ],
      "profile": "C0564300-0000-0000-0000AEEC",
      "settings": "E5D24300-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-16 09:24:47",
      "username": null,
    },
  },
  "63CDCD10-0000-0000-0000391B": Object {
    "id": "63CDCD10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-11-30 13:19:35",
      "email": "ken@pdffiller.com",
      "firstName": "Ken",
      "id": "AB2C6910-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Kadimsky",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "55C44600-0000-0000-0000D981",
      ],
      "profile": "9E7B6910-0000-0000-0000AEEC",
      "settings": "8ECE6910-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-11-30 13:20:00",
      "username": null,
    },
  },
  "66574510-0000-0000-0000391B": Object {
    "id": "66574510-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:38:01",
      "email": "aloshyn.yehor+3@pdffiller.team",
      "firstName": "Dima",
      "id": "E9B2A210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Golub",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "72288300-0000-0000-0000D981",
      ],
      "profile": "C1FBA210-0000-0000-0000AEEC",
      "settings": "4008A210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:38:43",
      "username": null,
    },
  },
  "691C5D20-0000-0000-0000391B": Object {
    "id": "691C5D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-12-21 09:40:44",
      "email": "otvodenko.bogdan+002@pdffiller.team",
      "firstName": "lol",
      "id": "C5638720-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "kek",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "459EC700-0000-0000-0000D981",
      ],
      "profile": "479B8720-0000-0000-0000AEEC",
      "settings": "BAE18720-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-12-21 09:41:40",
      "username": "otvodenko.bogdan+002",
    },
  },
  "8AD53D20-0000-0000-0000391B": Object {
    "id": "8AD53D20-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-17 11:18:27",
      "email": "aloshyn.yehor+1@pdffiller.team",
      "firstName": "Artem",
      "id": "54985400-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Tkachenko",
      "organizations": Array [
        "0F9FE100-0000-0000-0000D981",
        "8060B000-0000-0000-0000D981",
        "40EC7100-0000-0000-0000D981",
        "CE73D000-0000-0000-0000D981",
      ],
      "profile": "1A935400-0000-0000-0000AEEC",
      "settings": "4E595400-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-17 11:19:50",
      "username": null,
    },
  },
  "B5CC2710-0000-0000-0000391B": Object {
    "id": "B5CC2710-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-26 09:37:06",
      "email": "aloshyn.yehor+6@pdffiller.team",
      "firstName": "Oksana",
      "id": "9897E310-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Marchenko",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "8CED4400-0000-0000-0000D981",
      ],
      "profile": "9030E310-0000-0000-0000AEEC",
      "settings": "1C28E310-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-26 09:37:47",
      "username": null,
    },
  },
  "C20EFC10-0000-0000-0000391B": Object {
    "id": "C20EFC10-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-11-28 16:33:53",
      "email": "aloshyn.yehor+pdffiller@pdffiller.team",
      "firstName": "pdffiller",
      "id": "DFD84810-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "pdffiller",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "30748500-0000-0000-0000D981",
        "C4F47500-0000-0000-0000D981",
      ],
      "profile": "297A4810-0000-0000-0000AEEC",
      "settings": "FCAD4810-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-11-28 16:34:21",
      "username": null,
    },
  },
  "CBFF5910-0000-0000-0000391B": Object {
    "id": "CBFF5910-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-29 09:02:35",
      "email": "aloshyn.yehor+7@pdffiller.team",
      "firstName": "Kozhanaya",
      "id": "E869F510-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Zmeya",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "97AC7400-0000-0000-0000D981",
      ],
      "profile": "AF15F510-0000-0000-0000AEEC",
      "settings": "19D0F510-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-29 09:03:22",
      "username": null,
    },
  },
  "EA415500-0000-0000-0000391B": Object {
    "id": "EA415500-0000-0000-0000391B",
    "organization": "8060B000-0000-0000-0000D981",
    "role": 0,
    "status": "ACTIVE",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-17 11:27:48",
      "email": "aloshyn.yehor+2@pdffiller.team",
      "firstName": "asdasdas",
      "id": "2144B400-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "asdasdas",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "92271800-0000-0000-0000D981",
        "6BEAE000-0000-0000-0000D981",
      ],
      "profile": "BDB2B400-0000-0000-0000AEEC",
      "settings": "5E81B400-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-17 11:28:22",
      "username": null,
    },
  },
}
`;

exports[`processing.prune should be composable with composeMappers 1`] = `
Array [
  Object {
    "id": "50960400-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-16 09:23:52",
      "email": "aloshyn.yehor@pdffiller.team",
      "firstName": "Egor",
      "id": "C04A4300-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Aloshyn",
      "organizations": Array [
        "40EC7100-0000-0000-0000D981",
        "5C153500-0000-0000-0000D981",
        "92271800-0000-0000-0000D981",
        "8060B000-0000-0000-0000D981",
        "06914100-0000-0000-0000D981",
        "896FA000-0000-0000-0000D981",
      ],
      "profile": "C0564300-0000-0000-0000AEEC",
      "settings": "E5D24300-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-16 09:24:47",
      "username": null,
    },
  },
  Object {
    "id": "8AD53D20-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-17 11:18:27",
      "email": "aloshyn.yehor+1@pdffiller.team",
      "firstName": "Artem",
      "id": "54985400-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Tkachenko",
      "organizations": Array [
        "0F9FE100-0000-0000-0000D981",
        "8060B000-0000-0000-0000D981",
        "40EC7100-0000-0000-0000D981",
        "CE73D000-0000-0000-0000D981",
      ],
      "profile": "1A935400-0000-0000-0000AEEC",
      "settings": "4E595400-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-17 11:19:50",
      "username": null,
    },
  },
  Object {
    "id": "EA415500-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-17 11:27:48",
      "email": "aloshyn.yehor+2@pdffiller.team",
      "firstName": "asdasdas",
      "id": "2144B400-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "asdasdas",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "92271800-0000-0000-0000D981",
        "6BEAE000-0000-0000-0000D981",
      ],
      "profile": "BDB2B400-0000-0000-0000AEEC",
      "settings": "5E81B400-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-17 11:28:22",
      "username": null,
    },
  },
  Object {
    "id": "66574510-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:38:01",
      "email": "aloshyn.yehor+3@pdffiller.team",
      "firstName": "Dima",
      "id": "E9B2A210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Golub",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "72288300-0000-0000-0000D981",
      ],
      "profile": "C1FBA210-0000-0000-0000AEEC",
      "settings": "4008A210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:38:43",
      "username": null,
    },
  },
  Object {
    "id": "10B86510-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:39:23",
      "email": "aloshyn.yehor+4@pdffiller.team",
      "firstName": "Alex",
      "id": "F801B210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Pehota",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "A63B9300-0000-0000-0000D981",
      ],
      "profile": "BB9DB210-0000-0000-0000AEEC",
      "settings": "41E0B210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:39:51",
      "username": null,
    },
  },
  Object {
    "id": "0A7C8510-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-24 08:40:28",
      "email": "aloshyn.yehor+5@pdffiller.team",
      "firstName": "Vadim",
      "id": "CB8FC210-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Yas",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "B607A300-0000-0000-0000D981",
      ],
      "profile": "A975C210-0000-0000-0000AEEC",
      "settings": "979AC210-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-24 08:40:56",
      "username": null,
    },
  },
  Object {
    "id": "B5CC2710-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-26 09:37:06",
      "email": "aloshyn.yehor+6@pdffiller.team",
      "firstName": "Oksana",
      "id": "9897E310-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Marchenko",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "8CED4400-0000-0000-0000D981",
      ],
      "profile": "9030E310-0000-0000-0000AEEC",
      "settings": "1C28E310-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-26 09:37:47",
      "username": null,
    },
  },
  Object {
    "id": "CBFF5910-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-10-29 09:02:35",
      "email": "aloshyn.yehor+7@pdffiller.team",
      "firstName": "Kozhanaya",
      "id": "E869F510-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Zmeya",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "97AC7400-0000-0000-0000D981",
      ],
      "profile": "AF15F510-0000-0000-0000AEEC",
      "settings": "19D0F510-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-10-29 09:03:22",
      "username": null,
    },
  },
  Object {
    "id": "C20EFC10-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-11-28 16:33:53",
      "email": "aloshyn.yehor+pdffiller@pdffiller.team",
      "firstName": "pdffiller",
      "id": "DFD84810-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "pdffiller",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "30748500-0000-0000-0000D981",
        "C4F47500-0000-0000-0000D981",
      ],
      "profile": "297A4810-0000-0000-0000AEEC",
      "settings": "FCAD4810-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-11-28 16:34:21",
      "username": null,
    },
  },
  Object {
    "id": "63CDCD10-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": null,
      },
      "autoGenerated": 0,
      "createdAt": "2018-11-30 13:19:35",
      "email": "ken@pdffiller.com",
      "firstName": "Ken",
      "id": "AB2C6910-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Kadimsky",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "55C44600-0000-0000-0000D981",
      ],
      "profile": "9E7B6910-0000-0000-0000AEEC",
      "settings": "8ECE6910-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-11-30 13:20:00",
      "username": null,
    },
  },
  Object {
    "id": "2F670D20-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-12-14 07:39:55",
      "email": "kostyshyn.oleh+15@pdffiller.team",
      "firstName": "Oleh",
      "id": "79AD6720-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "Kostyshyn",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "CD1BA700-0000-0000-0000D981",
      ],
      "profile": "22C96720-0000-0000-0000AEEC",
      "settings": "51686720-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-12-14 07:40:45",
      "username": "kostyshyn.oleh+15",
    },
  },
  Object {
    "id": "691C5D20-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2018-12-21 09:40:44",
      "email": "otvodenko.bogdan+002@pdffiller.team",
      "firstName": "lol",
      "id": "C5638720-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "kek",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "459EC700-0000-0000-0000D981",
      ],
      "profile": "479B8720-0000-0000-0000AEEC",
      "settings": "BAE18720-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2018-12-21 09:41:40",
      "username": "otvodenko.bogdan+002",
    },
  },
  Object {
    "id": "0AF27030-0000-0000-0000391B",
    "user": Object {
      "__$meta": Object {
        "source": "",
      },
      "autoGenerated": 0,
      "createdAt": "2019-01-04 16:17:33",
      "email": "matushchenko.ievgeniia+dev15@pdffiller.team",
      "firstName": "adgb",
      "id": "CB762A20-0000-0000-00009BC6",
      "isSystem": 0,
      "lastName": "adfgn",
      "organizations": Array [
        "8060B000-0000-0000-0000D981",
        "581D5800-0000-0000-0000D981",
      ],
      "profile": "3D392A20-0000-0000-0000AEEC",
      "settings": "219C2A20-0000-0000-0000D045",
      "status": "ACTIVE",
      "updatedAt": "2019-01-04 16:18:16",
      "username": "matushchenko.ievgeniia+dev15",
    },
  },
]
`;

exports[`processing.prune should leave only id and email fields in user entities from list 1`] = `
Array [
  Object {
    "email": "aloshyn.yehor@pdffiller.team",
    "id": "C04A4300-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+1@pdffiller.team",
    "id": "54985400-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+2@pdffiller.team",
    "id": "2144B400-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+3@pdffiller.team",
    "id": "E9B2A210-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+4@pdffiller.team",
    "id": "F801B210-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+5@pdffiller.team",
    "id": "CB8FC210-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+6@pdffiller.team",
    "id": "9897E310-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+7@pdffiller.team",
    "id": "E869F510-0000-0000-00009BC6",
  },
  Object {
    "email": "aloshyn.yehor+pdffiller@pdffiller.team",
    "id": "DFD84810-0000-0000-00009BC6",
  },
  Object {
    "email": "ken@pdffiller.com",
    "id": "AB2C6910-0000-0000-00009BC6",
  },
  Object {
    "email": "kostyshyn.oleh+15@pdffiller.team",
    "id": "79AD6720-0000-0000-00009BC6",
  },
  Object {
    "email": "otvodenko.bogdan+002@pdffiller.team",
    "id": "C5638720-0000-0000-00009BC6",
  },
  Object {
    "email": "matushchenko.ievgeniia+dev15@pdffiller.team",
    "id": "CB762A20-0000-0000-00009BC6",
  },
]
`;

exports[`processing.prune should leave only id and email fields in user entities from lookup 1`] = `
Object {
  "2144B400-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+2@pdffiller.team",
    "id": "2144B400-0000-0000-00009BC6",
  },
  "54985400-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+1@pdffiller.team",
    "id": "54985400-0000-0000-00009BC6",
  },
  "79AD6720-0000-0000-00009BC6": Object {
    "email": "kostyshyn.oleh+15@pdffiller.team",
    "id": "79AD6720-0000-0000-00009BC6",
  },
  "9897E310-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+6@pdffiller.team",
    "id": "9897E310-0000-0000-00009BC6",
  },
  "AB2C6910-0000-0000-00009BC6": Object {
    "email": "ken@pdffiller.com",
    "id": "AB2C6910-0000-0000-00009BC6",
  },
  "C04A4300-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor@pdffiller.team",
    "id": "C04A4300-0000-0000-00009BC6",
  },
  "C5638720-0000-0000-00009BC6": Object {
    "email": "otvodenko.bogdan+002@pdffiller.team",
    "id": "C5638720-0000-0000-00009BC6",
  },
  "CB762A20-0000-0000-00009BC6": Object {
    "email": "matushchenko.ievgeniia+dev15@pdffiller.team",
    "id": "CB762A20-0000-0000-00009BC6",
  },
  "CB8FC210-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+5@pdffiller.team",
    "id": "CB8FC210-0000-0000-00009BC6",
  },
  "DFD84810-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+pdffiller@pdffiller.team",
    "id": "DFD84810-0000-0000-00009BC6",
  },
  "E869F510-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+7@pdffiller.team",
    "id": "E869F510-0000-0000-00009BC6",
  },
  "E9B2A210-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+3@pdffiller.team",
    "id": "E9B2A210-0000-0000-00009BC6",
  },
  "F801B210-0000-0000-00009BC6": Object {
    "email": "aloshyn.yehor+4@pdffiller.team",
    "id": "F801B210-0000-0000-00009BC6",
  },
}
`;
